# py-flagsmith-cli

./: .bumpversion.cfg  Justfile  README.md  flagsmith.json  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: coverall.yml  python-package.yml
py_flagsmith_cli/: __init__.py  utils.py
py_flagsmith_cli/clis/: get.py
tests/clis/: test_get.py  test_showenv.py
tests/mockdata/: __init__.py
tests/mockdata/clis/: get.py
